--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,22 @@
 body {
   margin: 0px;
   padding: 0px;
+  position: fixed;
 }
 
-#container {
-  width: 14402px;
-  height: 7202px;
+#graph{
+  display:block;
+  width:100%;
+  height:100%;
+  float:left;
+  min-width:1024px;
+  min-height:1024px;
+}
+
+#container{
+  display:inline-block;
+  position:relative;
+  width: 1802px;
+  height: 902px;
   border: solid 1px black;
 }
